2025/05/12 (hm) Feat: qna카테고리 조회 api 작업 + cors 오류 테스트